--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ djangorestframework-simplejwt==5.3.1
 djoser==2.2.3
 docrepr==0.2.0
 docutils==0.18.1
+drf-yasg==1.21.7
 entrypoints==0.4
 exceptiongroup==1.1.2
 executing==1.2.0
@@ -44,6 +45,7 @@ fonttools==4.42.0
 fqdn==1.5.1
 idna==3.4
 imagesize==1.4.1
+inflection==0.5.1
 iniconfig==2.0.0
 ipykernel==6.25.1
 ipyparallel==8.6.1
@@ -164,6 +166,7 @@ trio==0.22.2
 typing_extensions==4.7.1
 tzdata==2023.3
 uri-template==1.3.0
+uritemplate==4.1.1
 urllib3==2.0.4
 virtualenv==20.24.3
 virtualenv-clone==0.5.7
